# AgentLean

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
agentlean/: __init__.py  config.py  core.py  exceptions.py  pricing.py  stats.py  tokenizers.py
agentlean/providers/: __init__.py  anthropic.py  openai.py
agentlean/strategies/: __init__.py  budget.py  distill.py  system.py  window.py
examples/: basic_usage.py  budget_cap.py  radar_agent.py
tests/: conftest.py  test_anthropic_provider.py  test_budget.py  test_distill.py  test_openai_provider.py  test_stats.py  test_window.py
tests/fixtures/: api_response.json  long_conversation.json  web_search_output.json
