[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentlean"
version = "0.1.0"
description = "LLM middleware that dramatically reduces token costs in agentic workflows"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Tiago Fernandes" }]
keywords = [
    "llm",
    "ai",
    "agents",
    "token-optimization",
    "anthropic",
    "openai",
    "cost-reduction",
    "middleware",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.34.0"]
openai = ["openai>=1.40.0"]
tokenizers = ["tiktoken>=0.7.0"]
all = ["anthropic>=0.34.0", "openai>=1.40.0", "tiktoken>=0.7.0"]
dev = [
    "anthropic>=0.34.0",
    "openai>=1.40.0",
    "tiktoken>=0.7.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/TiagoRMFernandes/AgentLean"
Repository = "https://github.com/TiagoRMFernandes/AgentLean"
"Bug Tracker" = "https://github.com/TiagoRMFernandes/AgentLean/issues"

[tool.hatch.build.targets.wheel]
packages = ["agentlean"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["agentlean"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
